<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pet_blue"
    tools:context=".menuItems.KontaktActivity">


    <TextView
        android:id="@+id/kontakt_txt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/uns_kontaktieren"
        android:textColor="@color/white"
        android:fontFamily="@font/walkway_expand_ultrabold"
        android:textStyle="bold"
        android:paddingTop="30dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/sms"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/card_edge"
        android:drawableStart="@drawable/ic_sms"
        android:drawableLeft="@drawable/ic_sms"
        android:paddingStart="40dp"
        android:paddingLeft="10dp"
        android:paddingEnd="40dp"
        android:text="@string/eine_nachhricht_schicken"
        android:textColor="#FFF"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toBottomOf="@+id/kontakt_txt"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/card_edge"
        android:drawableStart="@drawable/email_icon"
        android:paddingStart="40dp"
        android:paddingLeft="10dp"
        android:paddingEnd="40dp"
        android:text="@string/eine_e_mail_senden"
        android:textColor="#FFF"
        app:layout_constraintTop_toBottomOf="@+id/sms"
        tools:layout_editor_absoluteX="-16dp"
        android:drawableLeft="@drawable/email_icon" />
    <Button
        android:id="@+id/call"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/card_edge"
        android:drawableStart="@drawable/ic_call"
        android:paddingStart="40dp"
        android:paddingLeft="10dp"
        android:paddingEnd="40dp"
        android:text="@string/support_anrufen"
        android:textColor="#FFF"
        app:layout_constraintTop_toBottomOf="@+id/mail"
        tools:layout_editor_absoluteX="-16dp"
        android:drawableLeft="@drawable/ic_call" />

    <Button
        android:id="@+id/whatsapp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/card_edge"
        android:drawableStart="@drawable/ic_whatsapp"
        android:paddingStart="40dp"
        android:paddingLeft="10dp"
        android:paddingEnd="40dp"
        android:text="@string/whatsapp"
        android:textColor="#FFF"
        app:layout_constraintTop_toBottomOf="@+id/call"
        tools:layout_editor_absoluteX="-16dp"
        android:drawableLeft="@drawable/ic_whatsapp" />




</androidx.constraintlayout.widget.ConstraintLayout>