<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pet_blue"
    tools:context=".order.PlaceYourOrderActivity"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView android:id="@+id/tvCustomerDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            android:text="@string/customer_details"
            android:fontFamily="@font/walkway_expand_ultrabold"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tvPickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/walkway_expand_semibold"
            android:text="@string/bargeld"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/switchDelivery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCustomerDetails" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCustomerDetails"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tvDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/walkway_expand_semibold"
            android:text="@string/karte"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/switchDelivery"
            app:layout_constraintTop_toBottomOf="@+id/tvCustomerDetails" />

        <EditText android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switchDelivery"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginBottom="05dp"
            android:hint="@string/bitte_name_eingeben"
            android:autofillHints="@string/bitte_name_eingeben"
            android:background="@drawable/shape_layout2"
            android:textSize="14sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:fontFamily="@font/walkway_expand_semibold"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <EditText android:id="@+id/inputAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputName"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginBottom="05dp"
            android:background="@drawable/shape_layout2"
            android:hint="@string/bitte_adresse_eingeben"
            android:visibility="gone"
            android:autofillHints="@string/bitte_adresse_eingeben"
            android:textSize="14sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:fontFamily="@font/walkway_expand_semibold"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <EditText android:id="@+id/inputCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputAddress"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginBottom="05dp"
            android:background="@drawable/shape_layout2"
            android:hint="@string/bitte_stadt_eingeben"
            android:visibility="gone"
            android:autofillHints="@string/bitte_stadt_eingeben"
            android:fontFamily="@font/walkway_expand_semibold"
            android:inputType="text"
            android:textSize="14sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <EditText android:id="@+id/inputState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputCity"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginBottom="05dp"
            android:background="@drawable/shape_layout2"
            android:hint="@string/enter_your_state"
            android:visibility="gone"
            tools:ignore="Autofill"
            android:textSize="14sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:fontFamily="@font/walkway_expand_semibold"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <EditText android:id="@+id/inputZip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputState"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginBottom="05dp"
            android:background="@drawable/shape_layout2"
            android:hint="@string/bitte_postleitzahl_eingeben"
            android:inputType="number"
            android:maxLength="5"
            android:visibility="gone"
            android:textSize="14sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:autofillHints="@string/bitte_postleitzahl_eingeben"
            android:fontFamily="@font/walkway_expand_semibold"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <TextView android:id="@+id/tvCardDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputZip"
            android:layout_margin="10dp"
            android:text="@string/karte_details"
            android:fontFamily="@font/walkway_expand_ultrabold"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white" />



        <EditText android:id="@+id/inputCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCardDetails"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginBottom="05dp"
            android:background="@drawable/shape_layout2"
            android:hint="@string/bitte_kartennummer_eingeben"
            android:inputType="number"
            android:maxLength="16"
            android:textSize="14sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:autofillHints="@string/bitte_kartennummer_eingeben"
            android:fontFamily="@font/walkway_expand_semibold"
            android:textColorHint="@color/white"/>

        <EditText android:id="@+id/inputCardExpiry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputCardNumber"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginBottom="05dp"
            android:background="@drawable/shape_layout2"
            android:hint="@string/bitte_karten_ablaufdatum_eingeben_mm_yyyy"
            android:inputType="number"
            android:maxLength="6"
            android:textSize="14sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:autofillHints="@string/bitte_karten_ablaufdatum_eingeben_mm_yyyy"
            android:fontFamily="@font/walkway_expand_semibold"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <EditText android:id="@+id/inputCardPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputCardExpiry"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginBottom="05dp"
            android:background="@drawable/shape_layout2"
            android:hint="@string/bitte_karten_geheimzahl_eingeben_3_digits"
            android:inputType="textPassword"
            android:maxLength="3"
            android:autofillHints="@string/bitte_karten_geheimzahl_eingeben_3_digits"
            tools:ignore="TextFields"
            android:textSize="14sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:fontFamily="@font/walkway_expand_semibold"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <TextView android:id="@+id/tvTotalItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputCardPin"
            android:layout_margin="10dp"
            android:text="@string/gesamte_artikel_im_warenkorb"
            android:fontFamily="@font/walkway_expand_ultrabold"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartItemsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="05dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/shape_layout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTotalItems"
            android:nestedScrollingEnabled="false"
            tools:ignore="UnusedAttribute" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/summeArean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/shape_layout"
            app:layout_constraintBottom_toTopOf="@id/buttonPlaceYourOrder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cartItemsRecyclerView"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tvSubtotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="14dp"
                android:paddingTop="4dp"
                android:fontFamily="@font/walkway_expand_ultrabold"
                android:text="@string/zwischensumme"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvSubtotalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/walkway_expand_ultrabold"
                android:text="@string/_0_0"
                android:paddingTop="4dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvDeliveryCharge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/walkway_expand_ultrabold"
                android:text="@string/solubox_servicegeb_hr"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSubtotal" />

            <TextView
                android:id="@+id/tvDeliveryChargeAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/walkway_expand_ultrabold"
                android:text="@string/_0_0"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSubtotal" />

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/walkway_expand_ultrabold"
                android:text="@string/total"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingBottom="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDeliveryCharge" />

            <TextView
                android:id="@+id/tvTotalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/walkway_expand_ultrabold"
                android:text="@string/_0_0"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingBottom="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDeliveryCharge" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/buttonPlaceYourOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/shape_layout2"
            android:fontFamily="@font/walkway_expand_ultrabold"
            android:gravity="center"
            android:padding="9dp"
            android:textStyle="bold"
            android:text="@string/bestellung_aufgeben"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/summeArean" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>